wip/gen3-network-policies/templates/auth_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-egress-netpolicy
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          authprovider: "yes"
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-auth-ingress
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector:
    matchLabels:
      authprovider: "yes"
  policyTypes:
  - Ingress
