wip/gen3-network-policies/templates/external_egress_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-egress-netpolicy
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.0.0/16
        - 172.16.0.0/12
        - 10.0.0.0/8
  # - to:
  #   - ipBlock:
  #       # TODO this looks like squid, do we need it?
  #       cidr: 172.26.225.72/32
  podSelector:
    matchLabels:
      internet: "yes"
  policyTypes:
  - Egress
