wip/gen3-network-policies/templates/gen3job_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gen3job-netpolicy
spec:
  podSelector:
    matchLabels:
      app: gen3job
  egress:
    - {}
  policyTypes:
   - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-gen3job-in
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gen3job
  policyTypes:
   - Ingress
