wip/gen3-network-policies/templates/linklocal_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linklocal-netpolicy
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 169.254.0.0/16
  podSelector:
    matchLabels:
      linklocal: "yes"
  policyTypes:
  - Egress
