wip/gen3-network-policies/templates/nolimit_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-nolimit
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      netnolimit: "yes"
  policyTypes:
  - Egress
